--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1783,8 +1783,6 @@ details[open] summary:after {
   padding-left: 0;
   gap: 8px;
 }
-.l {
-}
 .l__item {
   font-weight: 400;
   font-size: 14px;
@@ -1879,8 +1877,7 @@ details[open] summary:after {
 .check-up__cards {
   margin-top: 9px;
 }
-.cards {
-}
+
 .cards__list {
   list-style: none;
   padding-left: 0;
@@ -1888,16 +1885,14 @@ details[open] summary:after {
 .cards__item:last-child {
   margin-top: 11px;
 }
-.cards__img {
-}
+
 .cards__block {
   padding: 19px 30px 37px 30px;
   border-left: 1px solid #e4e4e2;
   border-right: 1px solid #e4e4e2;
   border-bottom: 1px solid #e4e4e2;
 }
-.lock {
-}
+
 .lock__time {
   justify-content: flex-end;
   display: flex;
@@ -1960,8 +1955,7 @@ details[open] summary:after {
   gap: 77px;
   padding-top: 150px;
 }
-.form__container {
-}
+
 .form__textbox {
   max-width: 276px;
   margin-left: auto;
@@ -1978,15 +1972,11 @@ details[open] summary:after {
   line-height: 30px;
   color: #ffffff;
 }
-.form__inner {
-}
+
 .form-wrap-container {
   max-width: 335px;
 }
-.question-form {
-}
-.question-form__name {
-}
+
 .form-input {
   width: 335px;
   padding: 16px 0px 13px 22px;
@@ -2021,5 +2011,315 @@ details[open] summary:after {
 .form__button {
   background-color: #000;
 }
-.btn {
+
+/* Articles Page  */
+
+.articles-heading {
+  background-image: url(/images/bengale@1x.png);
+  background-position: calc(100% - 174px) center;
+  background-size: 415px 317px;
+  background-repeat: no-repeat;
+}
+.cat {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+.cat__textbox {
+  max-width: 672px;
+  padding: 110px 0px 132px 112px;
+}
+.cat__title {
+  font-weight: 700;
+  font-size: 70px;
+  line-height: 64px;
+  color: #333333;
+  margin-bottom: 21px;
+}
+.cat__text {
+  max-width: 447px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  color: #949494;
+}
+
+.instruction {
+  margin-bottom: 126px;
+}
+.instruction__wrapper {
+  display: flex;
+  justify-content: space-between;
+  background-color: #fff;
+}
+.instruction__img {
+  max-width: 558px;
+}
+.instruction__inner {
+  padding: 68px 90px 68px 0;
+  max-width: 667px;
+}
+.instruction__container {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 35px;
+}
+.instruction__tags {
+  display: flex;
+  gap: 7px;
+}
+.instruction__tags span {
+  color: #3d9cea;
+  text-align: center;
+  font-size: 16px;
+  line-height: 22px;
+}
+
+.instruction__time time {
+  color: #949494;
+  font-size: 14px;
+  font-weight: 500;
+}
+.instruction__textbox {
+  max-width: 517px;
+}
+.instruction__heading {
+  color: #333;
+  font-size: 30px;
+  font-weight: 700;
+  max-width: 325px;
+  margin-bottom: 20px;
+}
+.instruction__text {
+  color: #949494;
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 51px;
+}
+.instruction__link {
+  color: #333;
+  font-size: 16px;
+  font-weight: 500;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+}
+
+.instruction__link::before {
+  content: "";
+  background-image: url(/images/paw-icon.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 23px;
+  height: 21px;
+  display: inline-block;
+  margin-right: 5px;
+}
+
+.steps {
+  padding-bottom: 150px;
+}
+.steps__list {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  row-gap: 60px;
+  padding-left: 0;
+  list-style: none;
+  margin-bottom: 116px;
+}
+.steps__item {
+  border-radius: 5px;
+  border: 1px solid #e4e4e2;
+  max-width: 305px;
+  width: 100%;
+}
+.steps__text-box {
+  margin-top: 21px;
+  padding: 0 22px 37px 30px;
+}
+.steps__time {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 3px;
+  color: #949494;
+  font-size: 14px;
+  font-weight: 500;
+}
+.steps__title {
+  color: #000;
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 25px;
+  margin-bottom: 10px;
+}
+.steps__text {
+  color: #949494;
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 37px;
+  max-width: 244px;
+  font-weight: 400;
+}
+.steps__link {
+  color: #333;
+  font-size: 16px;
+  font-weight: 500;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+}
+.steps__link::before {
+  content: "";
+  background-image: url(/images/paw-icon.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 23px;
+  height: 21px;
+  display: inline-block;
+  margin-right: 5px;
+}
+.steps__btns {
+  display: flex;
+  justify-content: center;
+}
+
+.steps__btn {
+  background-color: #333;
+  display: inline-flex;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+.steps__btn:hover {
+  background-color: #ffbd54;
+}
+.steps__btn::before {
+  content: "";
+  background-image: url(/images/refresh-icon.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 19px;
+  height: 15px;
+  display: inline-block;
+  margin-right: 6px;
+}
+
+/* about page */
+
+.about {
+  padding: 109px 0px 309px 112px;
+  background-image: url(/images/bab.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+.about__textbox {
+  max-width: 424px;
+}
+.about__title {
+  color: #333;
+  font-size: 70px;
+  font-weight: 700;
+  line-height: 64px;
+  margin-bottom: 22px;
+}
+.about__text {
+  color: #949494;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 400;
+}
+
+.locations {
+  max-width: 1440px;
+  width: 100%;
+  margin: 0 auto;
+}
+.locations__wrapper {
+  display: flex;
+}
+.location__img {
+  max-width: 705px;
+  width: 100%;
+}
+.locations__inner {
+  padding: 127px 68px 140px 112px;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+.locations__text {
+  color: #949494;
+  font-size: 20px;
+  line-height: 26px;
+  font-weight: 400;
+}
+
+.locations__text span {
+  color: #ffbd54;
+}
+
+.new {
+  margin-bottom: 23px;
+}
+.new__wrapper {
+  display: flex;
+}
+.new__inner {
+  max-width: 677px;
+  display: flex;
+  flex-direction: column;
+  gap: 19px;
+  padding: 103px 0px 221px 177px;
+}
+.new__text {
+  color: #949494;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 400;
+}
+.new__text span {
+  color: #78c0de;
+}
+.new__img {
+  max-width: 797px;
+}
+
+.end {
+  max-width: 1440px;
+  width: 100%;
+  margin: 0 auto;
+  margin-bottom: 145px;
+}
+.end__container {
+  display: flex;
+}
+.end__textbox {
+  max-width: 593px;
+  padding: 93px 0px 130px 177px;
+  margin-right: 30px;
+}
+.end__title {
+  color: #333;
+  font-size: 46px;
+  font-weight: 700;
+  line-height: 48px;
+  margin-bottom: 24px;
+}
+.end__title span {
+  color: #ffbd54;
+}
+.end__text {
+  color: #949494;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 400;
+  max-width: 343px;
+}
+.cardbox__container {
+  display: flex;
+  gap: 20px;
+}
+.cardbox__img {
 }
